test/compilable/test18951b.d
module compilable.test18951b;

import test18951a;

void test()
{
    A.foo(new Object);
}
