test/fail_compilation/fail2483.d

void main()
{
    scope Object foo;
    foo = new Object;
}
